--- a/app/src/main/res/layout/navigationheader_main.xml
+++ b/app/src/main/res/layout/navigationheader_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--导航窗格头部的布局-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -23,13 +24,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Administrator"
+        android:text="晚上好,MR.ZHANG"
+        android:textSize="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="家庭版" />
+        android:textSize="11dp"
+        android:text="家庭版 v1.1.2" />
 
 </LinearLayout>
