--- a/app/src/main/res/menu/navigation_main.xml
+++ b/app/src/main/res/menu/navigation_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--导航窗格的布局-->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
@@ -6,23 +7,40 @@
             android:id="@+id/nav_mainPage"
             android:icon="@drawable/ic_menu_gallery"
             android:title="主页"/>
-        <item
-            android:id="@+id/nav_findBand"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="寻找手环"/>
-        <item
-            android:id="@+id/nav_showBandInfor"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="显示手环信息"/>
-        <item
-            android:id="@+id/nav_addPatient"
-            android:icon="@drawable/ic_menu_send"
-            android:title="录入患者信息"/>
+
+
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
             android:title="设置"/>
     </group>
+
+    <item android:title="手环管理">
+        <menu>
+            <item
+                android:id="@+id/nav_findBand"
+                android:icon="@drawable/ic_menu_camera"
+                android:title="寻找手环"/>
+            <item
+                android:id="@+id/nav_showBandInfor"
+                android:icon="@drawable/ic_menu_slideshow"
+                android:title="显示手环信息"/>
+        </menu>
+    </item>
+
+    <item android:title="信息管理">
+        <menu>
+            <item
+                android:id="@+id/nav_addPatient"
+                android:icon="@drawable/ic_menu_send"
+                android:title="录入患者信息"/>
+            <item
+                android:id="@+id/nav_editPatient"
+                android:icon="@drawable/ic_edit_black_24dp"
+                android:title="编辑患者信息"/>
+        </menu>
+
+    </item>
 
     <!--<group android:checkableBehavior="single">-->
     <!--<item-->
