--- a/app/src/main/res/menu/options_main.xml
+++ b/app/src/main/res/menu/options_main.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--toolbar内布局-->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_share"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_menu_share"
+        android:icon="@drawable/ic_share_white_24dp"
         android:title="分享"
         app:showAsAction="always"
         />
-    <item
-        android:id="@+id/action_cleardatabase"
-        android:icon="@android:drawable/ic_menu_delete"
-        android:title="清空数据"/>
+    <!--<item-->
+    <!--android:id="@+id/action_cleardatabase"-->
+    <!--android:icon="@android:drawable/ic_menu_delete"-->
+    <!--android:title="清空数据"/>-->
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
